# expert-match-api

./: .gitignore  README.md  pyproject.toml
apps/api/: __init__.py  main.py  playground.py  schemas.py
apps/core/: cache.py  config.py  feedback_store.py  json_utils.py  llm_policies.py  logging.py  openai_compat_llm.py  runtime_validation.py  timer.py  utils.py
apps/docs/: ADR-001_NTIS_RAG_Architecture (1).md  API_SPECIFICATION.md  CONTRACT.md  GOLDEN_TESTS.md  INDEX.md  README.md  REFACTORING_PLAN.md  RUNBOOK.md  SERVICE_FLOW.md
apps/domain/: __init__.py  models.py
apps/recommendation/: __init__.py  cards.py  evidence.py  evidence_selector.py  judge.py  planner.py  reasoner.py  service.py
apps/search/: __init__.py  encoders.py  expansion_lexicon.py  filters.py  live_validator.py  qdrant_bootstrap.py  (+7 more)
docs/: CONTRACT.md  ENVIRONMENT.md  GOLDEN_TESTS.md  README.md  RUNBOOK.md  SERVICE_FLOW.md  expert_recommendation_code_based_diagrams.md  평가위원(전문가) 추천서비스 데이터 구조 정의_v0.3.xlsx  평가위원_추천_RAG_챗봇_설계구현제약방향성_지침서_v1.0.md  평가위원_추천_RAG_챗봇_설계구현제약방향성_지침서_v1.1.md  평가위원_추천_RAG_챗봇_설계구현제약방향성_지침서_v1.2.md
tests/: scratch_check_kisti.py  scratch_docs.py  scratch_migrate_docs.py  scratch_update_docs.py  scratch_update_docs_v2.py  test_api.py  test_domain_models.py  test_encoders.py  test_evidence_selector.py  test_filter_compiler.py  test_filter_script.py  test_judge.py  test_openai_compat_llm.py  test_planner.py  test_qdrant_bootstrap.py  test_query_builder.py  test_reasoner.py  test_recommendation_service.py  test_retriever.py  test_runtime_validation.py  test_seed_data.py
(+16 files in other folders)
