[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntis-person-api"
version = "0.1.0"
description = "NTIS evaluator recommendation MVP with Qdrant hybrid retrieval and LLM judging."
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "qdrant-client>=1.10.0,<2.0.0",
  "openai>=1.40.0,<2.0.0",
  "langchain-core>=0.3.0,<0.4.0",
  "sentence-transformers>=3.0.0,<4.0.0",
]

[project.scripts]
ntis-validate-live = "apps.tools.validate_live:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
